TW-84779 Allow users to define --add-opens JVM arguments